<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">维修通</string>
    <string name="action_settings">Settings</string>
    
    <string name="username">账号:</string>
    <string name="all_return">返回</string>
    <string name="register">注册</string>
    <string name="regist_user_hint">请输入账号(6-12个字符)</string>
    <string name="regist_pwd_hint">请输入密码(6-16个字符)</string>
    <string name="regist_pwd_real_hint">请再次输入密码</string>
    <string name="passwrod">密码:</string>
    <string name="real_enter">确定:</string>
    <string name="phonenumber">手机:</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="name_call_user">名称:</string>
    <string name="name_call_user_hint">请输入您想要的称呼</string>
    <string name="sure_code">验证码:</string>
    <string name="sure_code_hint">请输入手机验证码</string>
    <string name="get_phone_code">获取</string>
    <string name="regist_agree">已阅读并同意</string>
	
    <string name="login">登陆</string>
    <string name="use_item">使用条款</string>
    
    <string name="send_pwd_to_phone_textview">我们将密码以短信的方试发送到您手机上。</string>
    <string name="send">发送</string>
    <string name="send_message_end">已发送到您的手机上!</string>
    <string name="alread_regist">已注册</string>
    <string name="sumit_repair_order">提交维修单</string>
    <string name="remider_value">提醒</string>
    <string name="my_repair_order">我的维修单</string>
    <string name="more_value">更多</string>
    <string name="agree_item">我同意使用条款.</string>
    <string name="loss_pwd">忘记密码?</string>
    <string name="username_or_pwd_error">用户名或密码错误!</string>
    <string name="phone_number">手机号码:</string><string name="enter_pwd">请输入密码</string>
    
    <string name="phone_hint1">13800138000</string>
    <string name="sumit_order">提交</string>
    <string name="order_sumit_tv1">标题:</string>
    <string name="simit_order_title">请输入标题</string>
    <string name="order_sumit_around">范围:</string>
    <string name="person_private">个人</string>
    <string name="cemunicase">社区</string>
    <string name="tall_about">想跟天星公司维修员说些什么...</string>
    <string name="add_picture">添加照片:</string>
    <string name="use_new_address">使用新的联系方式</string>
    <string name="sumit_order1">提交</string>
    <string name="enter_address">填写地址</string>
    <string name="add_community1">添加联系方式</string>
    <string name="add_add_add">添加</string>
    <string name="sure_sure">确定</string>
    <string name="select_community">选择社区</string>
    <string name="please_input_community">请输入社区</string>
    <string name="community_1">社区:</string>
    <string name="modify_imformation">修改个人资料</string>
    <string name="name">姓名:</string>
    <string name="phone_number1">手机:</string>
    <string name="address">地址</string>
    <string name="modify_1">修改</string>
    <string name="repair_already_submit">维修单已提交</string>
    <string name="order_submit_3">您的维修单已经提交，我们会马上跟进。</string>
    <string name="order_number">您的订单号为:</string>
    <string name="ok_ok">ok</string>
    <string name="order_status_1">待审核</string>
    <string name="order_status_2">维修中</string>
    <string name="order_status_3">被拒绝</string>
    <string name="order_status_4">待确认</string>
    <string name="order_status_5">已结束</string>
    <string name="repair_order">维修单</string>
    <string name="order_number1">单号:</string>
    <string name="progress_status">进展情况</string>
    <string name="complete_end">完成</string>
    <string name="eidt_repair_order">编辑</string>
    <string name="delete_btn_text">删除</string>
    <string name="event_progress">事件进展</string>
    <string name="community_rb_tx_1">社区 银桦新村</string>
    <string name="community_rb_tx_2">社区 桃园新村</string>
    <string name="community_rb_tx_3">社区 南香里</string>
    <string name="community_rb_tx_4">社区 体育中心</string>
    <string name="please_enter_name">请输入姓名</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="please_enter_address">请输入地址</string>
    <string name="repair_detail_tv_title">标题:</string>
    <string name="phone_number2">号码:</string>
    <string name="repair_detail_tv_content">内容:</string>
    <string name="address1">地址:</string>
    <string name="repair_detail_photo">照片:</string>
    <string name="setting_setting">设置</string>
    <string name="private_imformation1">个人信息</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_software">关于维修通</string>
    <string name="check_version_update">检查版本更新</string>
    <string name="logout_logout">退出登陆</string>
    <string name="head_photo">头像</string>
    <string name="nick_name">昵称</string>
    <string name="community_private_imformation">小区</string>
    <string name="mobile_number">手机</string>
    <string name="name_all">姓名</string>
    <string name="edit_repair_contract">联系</string>
    <string name="edit_repair_contract1">方式:</string>
    <string name="edit_repair_pictrue_list">照片:</string>
    <string name="event_et_hint">说点什么</string>
    <string name="remider_titlebar_text">提醒</string>
    <string name="edit_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
	<string name="soft_update_no">已经是最新版本</string>
	<string name="event_text_system">系统</string>
	<string name="modify_nickname">修改昵称</string>
	<string name="modify_community">修改社区</string>
	<string name="modify_name">修改姓名</string>
	<string name="modify_address">修改地址</string>
	<string name="address_address_address">地址</string>
	<string name="reset_bind_photo_number">重新绑定手机</string>
	<string name="get_vertify_code">获取验证码</string>
	<string name="verifyCode">验证码</string>
	<string name="image_desc"></string>
    <string name="label_update">更新于: </string>
    <string name="label_last_time">1分钟前</string>
    
    <string name="pull_down_for_refresh">下拉刷新</string>
    <string name="release_for_refresh">松开刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    
    <string name="pull_up_for_more">上拉更多</string>
    <string name="release_for_more">松开加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="click_for_more">点击加载更多</string>
    <string name="input_username_hint">请输入账号</string>
    <string name="device_submit">设备:</string>
    <string name="simit_order_device_hint">请输入设备</string>
    <string name="submit_contrat">联系方式:</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_mobile_or_phone">请输入手机号码或者电话号码</string>
    <string name="phone_digits">0123456789</string>
    <string name="modify_password">修改密码</string>
    <string name="old_passwrod">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_password">确认密码</string>
    <string name="please_input_old_pwd_hint">请输入旧的密码</string>
    <string name="please_input_new_pwd_hint">请输入新的密码</string>
    <string name="please_sure_new_pwd_hint">请确认新的密码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="nickname_1">昵称:</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="picId1">picId1</string>
    <string name="picId2">picId2</string>
    <string name="picId3">picId3</string>
    <string name="picId4">picId4</string>
    <string name="picId5">picId5</string>
    
</resources>
