<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef" >

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/regist_button"
            android:text="@string/all_return"
            android:textColor="#eeeeee"
            android:textSize="12sp"
            >
            
            </Button>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efefef"
        android:layout_below="@+id/relative1"
        android:overScrollMode="always">
        <RelativeLayout 
   		 android:layout_width="match_parent"
   		 android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            
            android:layout_marginTop="15dp"
            android:src="@drawable/logo" />

   
   <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/imageView1"
        android:background="@drawable/regist_et_bg"
        android:orientation="vertical" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="42dp" >

           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="14.7dp"
               android:text="@string/username"
               android:textColor="#262528"
               
               android:textSize="12sp"
               android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:singleLine="true"
                android:maxLength="12"
                android:layout_marginLeft="14.7dp"
                android:digits="@string/edit_digits"
                android:textSize="12sp"
                android:hint="@string/regist_user_hint"
                >
              
        </EditText>

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="36dp" >

           <TextView
               android:id="@+id/textView23"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="14.7dp"
               android:text="@string/passwrod"
            
            android:textColor="#262528"
            android:textSize="12sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/regist_pwd_hint"
                android:inputType="textPassword"
                android:digits="@string/edit_digits"
                android:singleLine="true"
                android:maxLength="16"
                android:textSize="12sp"
                android:layout_marginLeft="14.7dp"
                android:layout_height="match_parent">
              
        </EditText>

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="32dp" >

           <TextView
               android:id="@+id/textView13"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="14.7dp"
              android:textColor="#262528"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/real_enter" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/regist_pwd_real_hint"
                android:singleLine="true"
                android:digits="@string/edit_digits"
                android:maxLength="16"
                android:textSize="12sp"
                android:layout_marginLeft="14.7dp"
                android:inputType="textPassword"
                android:layout_height="match_parent">
              
        </EditText>

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="32dp" >

           <TextView
               android:id="@+id/textView4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
    android:layout_marginLeft="14.7dp"
               android:textColor="#262528"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/phonenumber" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:background="@null"
                android:singleLine="true"
                android:inputType="phone"
                android:layout_marginLeft="14.7dp"
                android:textSize="12sp"
                android:digits="@string/phone_digits"
                android:maxLength="11"
                android:hint="@string/phone_hint"
                android:layout_height="match_parent">
              
        </EditText>

       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="32dp" >

           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="14.7dp"
               android:textColor="#262528"
            android:textSize="12sp"
            android:textStyle="bold"
            
            android:text="@string/name_call_user" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:background="@null"
                android:singleLine="true"
                android:textSize="12sp"
                android:maxLength="10"
                android:layout_marginLeft="14.7dp"
                android:hint="@string/name_call_user_hint"
                android:layout_height="match_parent">
              
        </EditText>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="37dp"
            >

           <TextView
               android:id="@+id/textView6"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_marginLeft="14.7dp"
               android:text="@string/sure_code"
               android:textColor="#262528"
               android:textSize="12sp"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/editText6"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_marginLeft="14.7dp"
               android:background="@null"
               android:hint="@string/sure_code_hint"
               android:maxLength="12"
               android:textSize="12sp"
               android:singleLine="true" >

           </EditText>

           <Button
               android:id="@+id/button3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="65dp"
               android:background="@drawable/get_message_button"
               android:layout_gravity="center_vertical"
               
               android:textStyle="bold" />

       </LinearLayout>
         
    </LinearLayout>
    

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:textColor="#ff0000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/linear1"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        
         />
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        >
        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textView9"
            android:checked="true"
            style="@style/MyCheckBox"
            android:layout_alignBottom="@+id/textView9"
            android:text="@string/regist_agree" 
            android:textSize="12sp"
            android:textColor="#000000"/>
        <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:textColor="#524aff"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textSize="12sp"
        android:text="@string/use_item" />

       
    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear1"
        android:layout_alignRight="@+id/linear1"
        android:layout_below="@+id/relative2"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/regist_button_sumit"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold" />

	</RelativeLayout>
    </ScrollView>
</RelativeLayout>
