<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/regist_button"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/all_return"
            android:textColor="#eeeeee"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_community1"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/edit_text_two_add_contract"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/name"
                android:textColor="#262528"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/please_input_name"
                android:inputType="text"
                android:maxLength="15"
                android:singleLine="true"
                android:textSize="12sp" >

                <requestFocus />
            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/phone_number1"
                android:textColor="#262528"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@null"
                android:hint="@string/please_input_mobile_or_phone"
                android:inputType="text"
                android:maxLength="12"
                android:digits="@string/phone_digits"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    
    <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear1"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="9dp"
                
                android:textColor="#ff0000"
                android:textSize="12sp"
                android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear1"
        android:layout_alignRight="@+id/linear1"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="100dp"
        android:background="@drawable/regist_button_sumit"
        android:text="@string/add_add_add"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>