<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef" >

    <RelativeLayout
      
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/regist_button"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/all_return"
            android:textColor="#eeeeee"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/modify_password"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/modify_private_imformation_et_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/old_passwrod"
                android:textColor="#262528"
                android:textSize="12sp"
                />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="14dp"
                android:background="@null"
                android:hint="@string/please_input_old_pwd_hint"
                android:inputType="text"
                android:maxLength="16"
                android:textColor="#262528"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/new_password"
                android:textColor="#262528"
                android:textSize="12sp"
                />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="14dp"
                android:background="@null"
                android:hint="@string/please_input_new_pwd_hint"
                android:inputType="text"
                android:maxLength="16"
                android:textColor="#262528"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/sure_password"
                android:textColor="#262528"
                android:textSize="12sp"
                />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="14dp"
                android:background="@null"
                android:hint="@string/please_sure_new_pwd_hint"
                android:inputType="text"
                android:maxLength="16"
                android:textColor="#262528"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#ff0000"
        android:textSize="12sp"
        android:text=""
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear1"
        android:layout_alignRight="@+id/linear1"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="80dp"
        android:background="@drawable/regist_button_sumit"
        android:text="@string/modify_1"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>